# pleezer

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs
.github/workflows/: check-stable.yml  code-quality.yml  periodic.yml
benches/: audio_math.rs
src/: audio_file.rs  config.rs  decoder.rs  decrypt.rs  dither.rs  error.rs  gateway.rs  http.rs  lib.rs  loudness.rs  main.rs  normalize.rs  player.rs  proxy.rs  remote.rs  ringbuf.rs  shape.rs  signal.rs  track.rs  util.rs  uuid.rs  volume.rs
src/protocol/: auth.rs  media.rs  mod.rs
src/protocol/connect/: channel.rs  contents.rs  messages.rs  stream.rs
src/protocol/gateway/: mod.rs  user_data.rs  user_radio.rs
src/protocol/gateway/list_data/: episodes.rs  livestream.rs  mod.rs  songs.rs
