[package]
name = "pleezer"
version = "0.18.0"
authors = ["Roderick van Domburg"]
description = "Headless Deezer Connect player"
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/roderickvd/pleezer/"
categories = ["multimedia::audio"]
keywords = ["audio", "deezer", "player"]
documentation = "https://docs.rs/pleezer"
include = [
    "benches/**/*",
    "src/**/*",
    "ATTRIBUTION.md",
    "build.rs",
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE.md",
    "README.md",
    "licenses/**/*",
    "secrets.toml.example",
]

[patch.crates-io]
# TODO: remove when https://github.com/pdeljanov/Symphonia/pull/340 is merged
symphonia = { git = "https://github.com/roderickvd/Symphonia", branch = "perf/faster-seeking" }

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["binary"]

# Enable command-line interface and binary build
binary = ["dep:clap"]

# Enable ASIO (Audio Stream Input/Output) backend for low-latency audio (Windows only)
# Requires Steinberg ASIO SDK and additional build setup
# See: https://docs.rs/crate/cpal/latest
asio = ["cpal/asio"]

# Enable JACK (JACK Audio Connection Kit) backend for low-latency audio with flexible routing  (Linux only)
# Requires JACK development files:
# - Debian/Ubuntu: libjack-dev
# - Fedora: jack-audio-connection-kit-devel
jack = ["cpal/jack"]

[dependencies]
base64 = "0.22"
biquad = "0.5"
blowfish = "0.9"
cbc = "0.1"
cookie_store = { version = "0.21", default-features = false }
cpal = "0.16"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
exponential-backoff = "2.0"
fastapprox = "0.3"
flate2 = "1.1"
futures-util = { version = "0.3", default-features = false }
governor = { version = "0.10", default-features = false, features = ["std"] }
http = "1.2"
log = "0.4"
machine-uid = "0.5"
md-5 = "0.10"
protobuf = { version = "3", features = ["with-bytes"] }
rand = "0.9"
regex-lite = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "brotli",
    "gzip",
    "rustls-tls-native-roots",
    "stream",
] }
reqwest_cookie_store = "0.8"
rodio = { version = "0.21.1", default-features = false, features = [
    "noise",
    "playback",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "3.14", features = ["json"] }
stream-download = { version = "0.22", features = ["reqwest-rustls"] }
sysinfo = { version = "0.36", default-features = false, features = ["system"] }
symphonia = { version = "0.5", default-features = false, features = [
    "aac",
    "flac",
    "isomp4",
    "mp3",
    "pcm",
    "wav",
] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = [
    "macros",
    "process",
    "signal",
    "rt-multi-thread",
    "time",
] }
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
tokio-util = "0.7"
toml = "0.9"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
veil = "0.2"

[[bin]]
name = "pleezer"
path = "src/main.rs"
required-features = ["binary"]

[[bench]]
name = "audio_math"
harness = false

[lib]
doctest = false

[dependencies.clap]
version = "4.5"
features = ["cargo", "derive", "env", "wrap_help"]
optional = true

[build-dependencies]
git2 = { version = "0.20", default-features = false }
protobuf-codegen = "3"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
fast-math = "0.1"

[profile.release]
# Default optimization settings balanced for minimum supported hardware
# (Raspberry Pi 3B+ with 1GB RAM). These settings provide good optimization
# while avoiding memory exhaustion during builds.
lto = "thin"      # Enable Thin Link Time Optimization
codegen-units = 1 # Optimize across the entire program

# For systems with more RAM, maximum runtime performance can be achieved
# by using full LTO (not supported by the mold linker):
#
# lto = true        # Enable Full Link Time Optimization

[package.metadata.deb]
assets = [
    [
        "target/release/pleezer",
        "usr/bin/",
        "755",
    ],
    [
        "README.md",
        "usr/share/doc/pleezer/README.md",
        "644",
    ],
    [
        "LICENSE.md",
        "usr/share/doc/pleezer/LICENSE.md",
        "644",
    ],
    [
        "ATTRIBUTION.md",
        "usr/share/doc/pleezer/ATTRIBUTION.md",
        "644",
    ],
    [
        "licenses/LGPL-2.1.txt",
        "usr/share/doc/pleezer/LGPL-2.1.txt",
        "644",
    ],
    [
        "secrets.toml.example",
        "usr/share/doc/pleezer/secrets.toml.example",
        "644",
    ],
]
copyright = "2024, Roderick van Domburg"
depends = "libasound2"
suggests = "libjack-dev"
section = "sound"
priority = "optional"
extended-description = """\
A headless streaming player built around the Deezer Connect protocol. \
Enables streaming from Deezer to any Linux system without a graphical interface, \
making it ideal for DIY setups, server-based systems, or custom integrations."""

[package.metadata.docs.rs]
all-features = true
